kubernetes/kube-system/dashboard/dashboard.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard-custom
  namespace: kube-system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboardingress
  namespace: kube-system
  # annotations:
    # ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/use-port-in-redirects: "true"
    # kubernetes.io/ingress.class: traefik0
spec:
  rules:
  - host: kubernetes.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard-custom
          servicePort: 443
  - host: kubernetes.thuis
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard-custom
          servicePort: 443
